feat: 完成资源注册与网关适配改造